# Undefined

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_DELIVERY_AGENT_PLAN.md  README.md  biome.json  config.toml.example  debug_notices.py  pyproject.toml
.githooks/: pre-commit  pre-tag
.github/: release.yml
apps/undefined-chat/src-tauri/: Cargo.toml  tauri.conf.json
apps/undefined-chat/src-tauri/capabilities/: default.json
apps/undefined-chat/src-tauri/icons/: icon.icns
apps/undefined-chat/src-tauri/src/: config.rs  download.rs  lib.rs  main.rs  mobile_secret.rs  native_tests.rs  platform.rs  poc_tests.rs  preview.rs  runtime_client.rs  secret.rs  state.rs  upload.rs
apps/undefined-console/src-tauri/: Cargo.toml  tauri.conf.json
apps/undefined-console/src-tauri/capabilities/: default.json
apps/undefined-console/src-tauri/src/: lib.rs  main.rs
config/: README.md
data/: .gitignore
docs/: access-control.md  agent-calling.md  app.md  auto-pipeline.md  build.md  callable.md  cognitive-memory.md  configuration.md  deployment.md  development.md  knowledge.md  management-api.md  memes.md  message-batching.md  model-compatibility.md  multi-model.md  naga_integration_contract.md  openapi.md  pipelines.md  python-api.md  slash-commands.md  tool-search.md  undefined-chat.md  usage.md  webui-guide.md  wechat-ilink.md
plan/: FINAL.md  IMPL.md  claude.md  claude_v2.md  gemini.md  gemini_v2.md  gpt.md  gpt_v2.md
res/: README.md
scripts/: README.md  build_native_apps.py  bump_version.py  install_git_hooks.sh  reembed_cognitive.py  (+4 more)
(+1092 files in other folders)
